# IpoNotifier

./: app.py  main.py  pyproject.toml  requirements.txt
src/graph/: graph_builder.py
src/llms/: GroqLlm.py
src/nodes/: output_formatter.py  prompt_generator.py
src/services/: twilio_service.py
src/state/: state.py
src/tools/: perplexity_tool.py
