[project]
name = "iponotifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langchain-openai>=0.3.28",
    "langchain-perplexity>=0.1.2",
    "langgraph>=0.5.4",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "twilio>=9.7.0",
    "uvicorn>=0.35.0",
]
